docs/api/0.9.8/utilities/diagnostics.md
---
sidebarDepth: 2
editLink: false
---
# Diagnostics
---

## Functions
|top-level functions: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
|:----|
 | <div class='method-sig' id='prefect-utilities-diagnostics-diagnostic-info'><p class="prefect-class">prefect.utilities.diagnostics.diagnostic_info</p>(flow=None, include_secret_names=False)<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/utilities/diagnostics.py#L128">[source]</a></span></div>
<p class="methods">Get full diagnostic information<br><br>**Args**:     <ul class="args"><li class="args">`flow ("prefect.Flow", optional)`: the flow whose attributes to retrieve. If no         flow is provided then flow information will not be present in output.     </li><li class="args">`include_secret_names (bool, optional)`: toggle output of Secret names, defaults to False.         Note: Secret values are never returned, only their names.</li></ul>**Returns**:     <ul class="args"><li class="args">`str`: a string representation of the full diagnostic information</li></ul></p>|
 | <div class='method-sig' id='prefect-utilities-diagnostics-flow-information'><p class="prefect-class">prefect.utilities.diagnostics.flow_information</p>(flow)<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/utilities/diagnostics.py#L73">[source]</a></span></div>
<p class="methods">Get flow information<br><br>**Args**:     <ul class="args"><li class="args">`flow ("prefect.Flow")`: the flow whose attributes to retrieve</li></ul>**Returns**:     <ul class="args"><li class="args">`dict`: a dictionary of informative flow attributes</li></ul></p>|
 | <div class='method-sig' id='prefect-utilities-diagnostics-system-information'><p class="prefect-class">prefect.utilities.diagnostics.system_information</p>()<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/utilities/diagnostics.py#L9">[source]</a></span></div>
<p class="methods">Get system information<br><br>**Returns**:     <ul class="args"><li class="args">`dict`: a dictionary containing some system information</li></ul></p>|
 | <div class='method-sig' id='prefect-utilities-diagnostics-config-overrides'><p class="prefect-class">prefect.utilities.diagnostics.config_overrides</p>(include_secret_names=False)<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/utilities/diagnostics.py#L25">[source]</a></span></div>
<p class="methods">Get user configuration overrides<br><br>**Args**:     <ul class="args"><li class="args">`include_secret_names (bool, optional)`: toggle output of Secret names, defaults to False.         Note: Secret values are never returned, only their names.</li></ul>**Returns**:     <ul class="args"><li class="args">`dict`: a dictionary containing names of user configuration overrides</li></ul></p>|
 | <div class='method-sig' id='prefect-utilities-diagnostics-environment-variables'><p class="prefect-class">prefect.utilities.diagnostics.environment_variables</p>()<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/utilities/diagnostics.py#L58">[source]</a></span></div>
<p class="methods">Get `PREFECT__` specific environment variables<br><br>**Returns**:     <ul class="args"><li class="args">`dict`: a dictionary containing names of set Prefect environment variables</li></ul></p>|

<p class="auto-gen">This documentation was auto-generated from commit <a href='https://github.com/PrefectHQ/prefect/commit/n/a'>n/a</a> </br>on March 30, 2020 at 17:55 UTC</p>